--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #D5E1EF;
 }
 
 .container {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Fredoka', sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -26,17 +32,24 @@ body {
 }
 
 .description {
-    position: flex;
     justify-content: center;
     text-align: center;
+    align-items: center;
     margin: 0 auto;
-    width: 18rem;
 }
 
 #title {
-    font-weight: bold;
+    font-weight: 900;
+    font-size: 20px;
+    padding-left: 18px;
+    padding-right: 18px;
+    margin-bottom: 14px;
+    padding-top: 10px;
 }
 
 #subtitle {
     color: #8d9098;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 16px;
 }
